writing r chapter on notes

--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -35,7 +35,7 @@
 \newglossaryentry{algrthm}{
     name = Algoritmo,
     sort = {algoritmo},
-    description = {Proceso o conjunto de reglas a seguir para realizar una tarea en específico}
+    description = {Conjunto de pasos a seguir para completar una tarea. \textit{Conjunto de pasos para que un programa termine una tarea}}
 }
 
 \newglossaryentry{xprts}{
@@ -206,6 +206,11 @@
     description = {Documento que identifica claramente los productos y servicios que un proveedor o contratista proporciona a una organización. Incluye elementos como objetivos, directrices, programas y costos. \textit{no es lo mismo que el alcance: este puede ser parte de la declaración}}
 }
 
+\newglossaryentry{opnsrc}{
+    name = \textit{Open Source},
+    sort = {open}, 
+    description = {Código de libre disponibilidad, que podría ser modificado y compartido por las personas que lo utilizan}
+}
 
 
 
