--- a/notes/analyze.tex
+++ b/notes/analyze.tex
@@ -34,7 +34,7 @@ La validación es una herramienta de revisión de exactitud y calidad de los dat
 
 \subsubsection{Condiciones de Validación}
 \begin{description}
-    \item [\gls{datatype}]{: formato correcto para los valores}
+    \item [\textit{datatype}]{: formato correcto para los valores}
     \item [Rango]{: los valores se encuentran dentro de un rango de máximos y mínimos predefinidos}
     \item [Obligatoriedad]{: los valores no pueden ser nulos, blancos o vacíos}
     \item [Unicidad]{: ningún valor está duplicado}
@@ -62,7 +62,7 @@ Al verificar el proceso de limpieza, se confirma su calidad: si fue bien ejecuta
     \item {Espacios y caracteres extra}
     \item {Duplicados}
     \item {Formatos no coincidentes}
-    \item {\gls{str} y fechas desordenadas o incoherentes}
+    \item {Strings y fechas desordenadas o incoherentes}
     \item {Etiquetas engañosas de columnas}
     \item {Datos truncados}
 \end{itemize}
