--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -20,24 +20,6 @@
     description = {Conjunto de instrucciones para un cálculo específico, usando los datos disponibles. \textit{Ejemplos: Promedio, Error, Desviación Estándar}}
 }
 
-\newglossaryentry{fnctn}{
-    name = Función,
-    sort = {función},
-    description = {Grupo de instrucciones que lleva a cabo un cálculo en específico utilizando datos}
-}
-
-\newglossaryentry{oprtr}{
-    name = Operador,
-    sort = {operador},
-    description = {Símbolo que nombra el tipo de operación o cálculo matemático a realizar. \textit{Ejemplos: operadores lógicos and, or, not}}
-}
-
-\newglossaryentry{algrthm}{
-    name = Algoritmo,
-    sort = {algoritmo},
-    description = {Conjunto de pasos a seguir para completar una tarea. \textit{Conjunto de pasos para que un programa termine una tarea}}
-}
-
 \newglossaryentry{xprts}{
     name = Expertos en la Materia, 
     sort = {expertos},
@@ -80,12 +62,6 @@
     \end{itemize}}
 }
 
-\newglossaryentry{cld}{
-    name = La Nube,
-    sort = {nube},
-    description = {Ubicación virtual donde pueden almacenarse datos, en vez de utilizar un \textit{harddrive} de computador}
-}
-
 \newglossaryentry{5w}{
     name = \textit{Five Why's},
     sort = {five},
@@ -96,18 +72,6 @@
     name = \textit{Gap Analysis},
     sort = {analisis deficit},
     description = {\textit{Análisis de Déficit}. Método de evaluación y examinación de un proceso y cómo funciona actualmente, en contraste con la meta y estado ideal}
-}
-
-\newglossaryentry{str}{
-    name = \textit{String},
-    sort = {string},
-    description = {\textit{Text String o Cadena de Texto}. Secuencia de caracteres y puntuación dentro de una celda con información textual, compuestos mayormente por letras}
-}
-
-\newglossaryentry{datatype}{
-    name = \textit{Data Type},
-    sort = {data type},
-    description = {\textit{Tipo de Dato}. Descripción del tipo de valor que cierto atributo posee. \textit{Ejemplos: number (int, float), string, bool (verdadero o falso en base a condiciones lógicas)}}
 }
 
 \newglossaryentry{ethcs}{
@@ -167,7 +131,7 @@
 \newglossaryentry{typecast}{
     name = \textit{Typecasting},
     sort = {typecast},
-    description = {Conversión de \gls{datatype}}
+    description = {Conversión de \textit{datatype}}
 }
 
 \newglossaryentry{chnglg}{
