--- a/notes/main.tex
+++ b/notes/main.tex
@@ -66,9 +66,10 @@
 \input{destrezas}
 \input{design}
 \input{statistics}
+\input{basics}
 \input{spreadsheet}
 \input{SQL}
-\input{R}
+\input{R.Rtex}
 \input{tableau}
 \input{tools}
 \input{ask}
