--- a/notes/spreadsheet.tex
+++ b/notes/spreadsheet.tex
@@ -6,7 +6,7 @@ Las hojas de cálculo se utilizan generalmente para conjuntos de datos pequeños
 Las hojas de cálculo pueden bloquearse para prevenir cambios por otros usuarios, ya sea la hoja completa o solo un rango. 
 
 \paragraph{Herramientas Comunes}
-Toda fórmula se comienza escribiendo '='. Al hacerlo, se despliega un menú que incluye fórmulas, nombres y \gls{str}. Se incluyen ejemplos de \gls{syntx} para \textcolor{blue}{fórmulas} y \textcolor{ForestGreen}{funciones}. Después de aplicar una fórmula, se recomienda copiar y pegar la información generada para convertirla en datos estáticos
+Toda fórmula se comienza escribiendo '='. Al hacerlo, se despliega un menú que incluye fórmulas, nombres y \textit{strings}. Se incluyen ejemplos de \gls{syntx} para \textcolor{blue}{fórmulas} y \textcolor{ForestGreen}{funciones}. Después de aplicar una fórmula, se recomienda copiar y pegar la información generada para convertirla en datos estáticos
 \begin{itemize}
     \item {\textbf{Llenado Automático}: Presente como un cuadrado en la esquina inferior derecha de la celda, se arrastra y llena celdas vacías con el contenido y referencias de la celda inicial}
     \item {\textbf{Remover Duplicados}: Busca y elimina automáticamente aquellas entradas que podrían estar duplicadas} 
@@ -27,11 +27,11 @@ Toda fórmula se comienza escribiendo '='. Al hacerlo, se despliega un menú que
     \end{itemize}} 
     \item {\textcolor{ForestGreen}{\textbf{SPLIT}}: Función que divide el texto en base a un caracter, y guarda cada fragmento en una celda nueva. El caracter es un \textbf{delimitador} y puede ser un espacio, coma, guiones, entre otros}
     \item {\textcolor{ForestGreen}{\textbf{MATCH}}: Función que se utiliza para ubicar la posición de un valor específico a buscar}
-    \item {\textcolor{ForestGreen}{\textbf{=CONCATENATE(item1,item2...)}}: Función que une múltiples \gls{str} en uno solo. \textit{ej =CONCATENATE("text",'' '',"string") devuelve "text string"}. Para dos valores, CONCAT es suficiente}
-    \item {\textcolor{ForestGreen}{\textbf{=LEN(rango)}}: Cuenta el número de caracteres que contiene un \gls{str} dado. \textit{ej =LEN(A21) devuelve el largo del string en la celda A21}}
-    \item {\textcolor{ForestGreen}{\textbf{=LEFT}} \& \textcolor{ForestGreen}{\textbf{=RIGHT}}: Extrae un conjunto de caracteres a la izquierda o derecha de un \gls{str} determinado}
-    \item {\textcolor{ForestGreen}{\textbf{=MID(rango,punto\_referencia,cant\_char)}}: Extrae un segmento de \gls{str} desde el medio. \textit{ej =MID(C3,4,5) devuelve un string de 5 caracteres que empezó en la posición 4 del string inicial ubicado en la celda C3}}
-    \item {\textcolor{ForestGreen}{\textbf{=TRIM(rango)}}: Remueve los espacios iniciales, finales y repetidos de un \gls{str}. \textit{ej =TRIM('' a esto le sobran espacios  '') devuelve ''a esto le sobran espacios''}}
+    \item {\textcolor{ForestGreen}{\textbf{=CONCATENATE(item1,item2...)}}: Función que une múltiples \textit{strings} en uno solo. \textit{ej =CONCATENATE("text",'' '',"string") devuelve "text string"}. Para dos valores, CONCAT es suficiente}
+    \item {\textcolor{ForestGreen}{\textbf{=LEN(rango)}}: Cuenta el número de caracteres que contiene un \textit{string} dado. \textit{ej =LEN(A21) devuelve el largo del string en la celda A21}}
+    \item {\textcolor{ForestGreen}{\textbf{=LEFT}} \& \textcolor{ForestGreen}{\textbf{=RIGHT}}: Extrae un conjunto de caracteres a la izquierda o derecha de un \textit{string} determinado}
+    \item {\textcolor{ForestGreen}{\textbf{=MID(rango,punto\_referencia,cant\_char)}}: Extrae un segmento de \textit{strings} desde el medio. \textit{ej =MID(C3,4,5) devuelve un string de 5 caracteres que empezó en la posición 4 del string inicial ubicado en la celda C3}}
+    \item {\textcolor{ForestGreen}{\textbf{=TRIM(rango)}}: Remueve los espacios iniciales, finales y repetidos de un \textit{string}. \textit{ej =TRIM('' a esto le sobran espacios  '') devuelve ''a esto le sobran espacios''}}
     \item {\textcolor{ForestGreen}{\textbf{=VLOOKUP(valor,''nombre\_ubicacion'',rango,columna(n°),FALSE)}}: \textit{Vertical Lookup}, busca un valor en una columna numerada (A=1, B=2,...), para devolver otro valor correspondiente. Usar TRUE para coincidencias similares, FALSE para coincidencias exactas. \textit{VLOOKUP tiene problemas con extra espacios: aplicar TRIM para eliminarlos; en presencia de duplicados o más repeticiones, devolverá la primera coincidencia que encuentre de izquierda a derecha, de arriba a abajo}. \textbf{Esta es una herramienta de agregación}}
     \item {\textcolor{ForestGreen}{\textbf{=VALUE(rango)}}: convierte el rango seleccionado a valores numéricos}
     \item {\textcolor{ForestGreen}{\textbf{=IMPORTRANGE(sheet\_url,range\_str)}}: Importa datos desde una hoja de cálculo a otra, con actualización automática ante cualquier cambio}
