--- a/notes/main.tex
+++ b/notes/main.tex
@@ -42,6 +42,17 @@
 \usepackage{multirow}
 \usepackage{xcolor}
 \usepackage[toc]{glossaries-extra}
+\usepackage{listings}
+\definecolor{light-gray}{gray}{0.95}
+
+\lstset{ %
+ language=R,
+  basicstyle=\footnotesize,
+  numbers=left, 
+  numberstyle=\tiny\color{gray},
+  stepnumber=1, 
+  backgroundcolor=\color{light-gray},
+}
 \input{gloss}
 
 % INICIO DE PÁGINAS
